--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,4 +216,67 @@
     <!--Zaturi end-->
 
 
+
+    <string name="feature_0high">평소에 비해 움직임이 적었어요</string>
+    <string name="feature_1high">평소에 비해 움직임이 많았어요 (걷기)</string>
+    <string name="feature_2high">평소에 비해 움직임이 많았어요 (뛰기)</string>
+    <string name="feature_3high">평소에 비해 움직임이 많았어요 (자전거)</string>
+    <string name="feature_4high">평소에 비해 움직임이 많았어요 (걷기)</string>
+    <string name="feature_5high">평소에 비해 차량 이동이 많았어요</string>
+    <string name="feature_6high">평소에 비해 주변이 시끄러웠던 것 같아요</string>
+    <string name="feature_7high">평소에 비해 통화량이 많았어요</string>
+    <string name="feature_8high">평소에 비해 통화량이 많았어요</string>
+    <string name="feature_9high">평소에 비해 통화량이 많았어요</string>
+    <string name="feature_10high">평소에 비해 통화중 대화량이 많았어요</string>
+    <string name="feature_11high">평소에 비해 SNS 앱 사용이 많았어요</string>
+    <string name="feature_12high">평소에 비해 많이 이동했어요</string>
+    <string name="feature_13high">평소에 비해 방문했던 장소가 많았어요</string>
+    <string name="feature_14high">평소에 비해 멀리 나갔어요</string>
+    <string name="feature_15high">평소에 비해 집에서 멀리 나갔어요</string>
+    <string name="feature_16high">평소에 비해 집에 오래 머물렀어요</string>
+    <string name="feature_17high">평소에 비해 집에서 휴대폰 사용이 많았어요</string>
+    <string name="feature_18high">평소에 비해 휴대폰 사용이 많았어요</string>
+    <string name="feature_19high">평소에 비해 Entertainment &amp; Music 앱 사용이 많았어요</string>
+    <string name="feature_20high">평소에 비해 Utility 앱 사용(멤버십, 문서도구)이 많았어요</string>
+    <string name="feature_21high">평소에 비해 Shopping 앱 사용(결제, 쇼핑몰)이 많았어요</string>
+    <string name="feature_22high">평소에 비해 게임 앱 사용이 많았어요</string>
+    <string name="feature_23high">평소에 비해 Health 앱 사용(다이어트, 뷰티)이 많았어요</string>
+    <string name="feature_24high">평소에 비해 Education 앱 사용(이북)이 많았어요</string>
+    <string name="feature_25high">평소에 비해 Travel 앱 사용(교통, 여행)이 많았어요</string>
+    <string name="feature_26high">평소에 비해 Art &amp; Photo 앱 사용(카메라, 그리기도구)이 많았어요</string>
+    <string name="feature_27high">평소에 비해 News 앱 사용(뉴스, 매거진)이 많았어요</string>
+    <string name="feature_28high">평소에 비해 Food 앱 사용(배달, 요리)이 많았어요</string>
+    <string name="feature_29high">평소에 비해 수면 시간이 많았어요</string>
+
+    <string name="feature_0low">평소에 비해 움직임이 많았어요</string>
+    <string name="feature_1low">평소에 비해 움직임이 적었어요 (걷기)</string>
+    <string name="feature_2low">평소에 비해 움직임이 적었어요 (뛰기)</string>
+    <string name="feature_3low">평소에 비해 움직임이 적었어요 (자전거)</string>
+    <string name="feature_4low">평소에 비해 움직임이 적었어요 (걷기)</string>
+    <string name="feature_5low">평소에 비해 차량 이동이 적었어요 많았어요</string>
+    <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요 것 같아요</string>
+    <string name="feature_7low">평소에 비해 통화량이 적었어요</string>
+    <string name="feature_8low">평소에 비해 통화량이 적었어요</string>
+    <string name="feature_9low">평소에 비해 통화량이 적었어요</string>
+    <string name="feature_10low">평소에 비해 통화 중 대화량이 적었어요</string>
+    <string name="feature_11low">평소에 비해 SNS 앱 사용이 적었어요</string>
+    <string name="feature_12low">평소에 비해 적게 이동했어요</string>
+    <string name="feature_13low">평소에 비해 방문했던 장소가 적었어요</string>
+    <string name="feature_14low">평소에 비해 멀리 나가지 않았어요</string>
+    <string name="feature_15low">평소에 비해 집에서 멀리 나가지 않았어요</string>
+    <string name="feature_16low">평소에 비해 집에 적게 머물렀어요</string>
+    <string name="feature_17low">평소에 비해 집에서 휴대폰 사용이 적었어요</string>
+    <string name="feature_18low">평소에 비해 휴대폰 사용이 적었어요</string>
+    <string name="feature_19low">평소에 비해 Entertainment &amp; Music 앱 사용이 적었어요</string>
+    <string name="feature_20low">평소에 비해 Utility 앱 사용(멤버십, 문서도구)이 적었어요</string>
+    <string name="feature_21low">평소에 비해 Shopping 앱 사용(결제, 쇼핑몰)이 적었어요</string>
+    <string name="feature_22low">평소에 비해 게임 앱 사용이 적었어요</string>
+    <string name="feature_23low">평소에 비해 Health 앱 사용(다이어트, 뷰티)이 적었어요</string>
+    <string name="feature_24low">평소에 비해 Education 앱 사용(이북)이 적었어요</string>
+    <string name="feature_25low">평소에 비해 Travel 앱 사용(교통, 여행)이 적었어요</string>
+    <string name="feature_26low">평소에 비해 Art &amp; Photo 앱 사용(카메라, 그리기도구)이 적었어요</string>
+    <string name="feature_27low">평소에 비해 News 앱 사용(뉴스, 매거진)이 적었어요</string>
+    <string name="feature_28low">평소에 비해 Food 앱 사용(배달, 요리)이 적었어요</string>
+    <string name="feature_29low">평소에 비해 수면 시간이 적었어요</string>
+
 </resources>
