--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,4 +290,6 @@
 
     <string name="string_comment_hint">오늘 스트레스에 영향을 준 특별한 사건이 있었나요?\n마인드스코프가 어떤 영향을 주었나요?\n마인드스코프의 예측은 정확했나요?</string>
 
+    <string name="string_survey_incomplete">설문미완료</string>
+    <string name="string_survey_complete">설문완료</string>
 </resources>
