1) add application log upload 2) fixed bug : when no report

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -288,4 +288,6 @@
 
     <string name="string_child2_make_intervention">스트레스 해소방안 만들기</string>
     <string name="string_child2_do_intervention">스트레스 해소하기</string>
+
+    <string name="string_no_detail_report">자세한 예측 결과가 없습니다.</string>
 </resources>
