1) Update Tag Hint 2) Fixed showing stress summary in STEP2 3) Points sync to server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,16 +237,16 @@
     <string name="feature_16high">평소에 비해 집에 오래 머물렀어요</string>
     <string name="feature_17high">평소에 비해 집에서 휴대폰 사용이 많았어요</string>
     <string name="feature_18high">평소에 비해 휴대폰 사용이 많았어요</string>
-    <string name="feature_19high">평소에 비해 Entertainment &amp; Music 앱 사용이 많았어요</string>
-    <string name="feature_20high">평소에 비해 Utility 앱 사용(멤버십, 문서도구)이 많았어요</string>
-    <string name="feature_21high">평소에 비해 Shopping 앱 사용(결제, 쇼핑몰)이 많았어요</string>
+    <string name="feature_19high">평소에 비해 Entertainment &amp; Music 앱\n사용이 많았어요</string>
+    <string name="feature_20high">평소에 비해 Utility 앱\n사용(멤버십, 문서도구)이 많았어요</string>
+    <string name="feature_21high">평소에 비해 Shopping 앱\n사용(결제, 쇼핑몰)이 많았어요</string>
     <string name="feature_22high">평소에 비해 게임 앱 사용이 많았어요</string>
-    <string name="feature_23high">평소에 비해 Health 앱 사용(다이어트, 뷰티)이 많았어요</string>
-    <string name="feature_24high">평소에 비해 Education 앱 사용(이북)이 많았어요</string>
-    <string name="feature_25high">평소에 비해 Travel 앱 사용(교통, 여행)이 많았어요</string>
-    <string name="feature_26high">평소에 비해 Art &amp; Photo 앱 사용(카메라, 그리기도구)이 많았어요</string>
-    <string name="feature_27high">평소에 비해 News 앱 사용(뉴스, 매거진)이 많았어요</string>
-    <string name="feature_28high">평소에 비해 Food 앱 사용(배달, 요리)이 많았어요</string>
+    <string name="feature_23high">평소에 비해 Health 앱\n사용(다이어트, 뷰티)이 많았어요</string>
+    <string name="feature_24high">평소에 비해 Education 앱\n사용(이북)이 많았어요</string>
+    <string name="feature_25high">평소에 비해 Travel 앱\n사용(교통, 여행)이 많았어요</string>
+    <string name="feature_26high">평소에 비해 Art &amp; Photo 앱\n사용(카메라, 그리기도구)이 많았어요</string>
+    <string name="feature_27high">평소에 비해 News 앱\n사용(뉴스, 매거진)이 많았어요</string>
+    <string name="feature_28high">평소에 비해 Food 앱\n사용(배달, 요리)이 많았어요</string>
     <string name="feature_29high">평소에 비해 수면 시간이 많았어요</string>
 
     <string name="feature_0low">평소에 비해 움직임이 많았어요</string>
@@ -255,7 +255,7 @@
     <string name="feature_3low">평소에 비해 움직임이 적었어요 (자전거)</string>
     <string name="feature_4low">평소에 비해 움직임이 적었어요 (걷기)</string>
     <string name="feature_5low">평소에 비해 차량 이동이 적었어요 많았어요</string>
-    <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요 것 같아요</string>
+    <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요</string>
     <string name="feature_7low">평소에 비해 통화량이 적었어요</string>
     <string name="feature_8low">평소에 비해 통화량이 적었어요</string>
     <string name="feature_9low">평소에 비해 통화량이 적었어요</string>
@@ -268,28 +268,28 @@
     <string name="feature_16low">평소에 비해 집에 적게 머물렀어요</string>
     <string name="feature_17low">평소에 비해 집에서 휴대폰 사용이 적었어요</string>
     <string name="feature_18low">평소에 비해 휴대폰 사용이 적었어요</string>
-    <string name="feature_19low">평소에 비해 Entertainment &amp; Music 앱 사용이 적었어요</string>
-    <string name="feature_20low">평소에 비해 Utility 앱 사용(멤버십, 문서도구)이 적었어요</string>
-    <string name="feature_21low">평소에 비해 Shopping 앱 사용(결제, 쇼핑몰)이 적었어요</string>
+    <string name="feature_19low">평소에 비해 Entertainment &amp; Music 앱\n사용이 적었어요</string>
+    <string name="feature_20low">평소에 비해 Utility 앱\n사용(멤버십, 문서도구)이 적었어요</string>
+    <string name="feature_21low">평소에 비해 Shopping 앱\n사용(결제, 쇼핑몰)이 적었어요</string>
     <string name="feature_22low">평소에 비해 게임 앱 사용이 적었어요</string>
-    <string name="feature_23low">평소에 비해 Health 앱 사용(다이어트, 뷰티)이 적었어요</string>
-    <string name="feature_24low">평소에 비해 Education 앱 사용(이북)이 적었어요</string>
-    <string name="feature_25low">평소에 비해 Travel 앱 사용(교통, 여행)이 적었어요</string>
-    <string name="feature_26low">평소에 비해 Art &amp; Photo 앱 사용(카메라, 그리기도구)이 적었어요</string>
-    <string name="feature_27low">평소에 비해 News 앱 사용(뉴스, 매거진)이 적었어요</string>
-    <string name="feature_28low">평소에 비해 Food 앱 사용(배달, 요리)이 적었어요</string>
+    <string name="feature_23low">평소에 비해 Health 앱\n사용(다이어트, 뷰티)이 적었어요</string>
+    <string name="feature_24low">평소에 비해 Education\n앱 사용(이북)이 적었어요</string>
+    <string name="feature_25low">평소에 비해 Travel 앱\n사용(교통, 여행)이 적었어요</string>
+    <string name="feature_26low">평소에 비해 Art &amp; Photo 앱\n사용(카메라, 그리기도구)이 적었어요</string>
+    <string name="feature_27low">평소에 비해 News 앱\n사용(뉴스, 매거진)이 적었어요</string>
+    <string name="feature_28low">평소에 비해 Food 앱\n사용(배달, 요리)이 적었어요</string>
     <string name="feature_29low">평소에 비해 수면 시간이 적었어요</string>
 
-    <string name="feature_0general_0">일반적으로 활동량이 많을 때, 스트레스가 낮아요</string>
-    <string name="feature_0general_1">일반적으로 활동량이 적을 때, 스트레스가 높아요</string>
-    <string name="feature_7general_0">일반적으로 다른 사람들과의 교류가 많을 때, 스트레스가 낮아요</string>
-    <string name="feature_7general_1">일반적으로  다른 사람들과의 교류가 적을 때, 스트레스가 높아요</string>
-    <string name="feature_12general_0">일반적으로  활동 반경이 클 때, 스트레스가 낮아요</string>
-    <string name="feature_12general_1">일반적으로  활동 반경이 작을 때, 스트레스가 높아요</string>
-    <string name="feature_18general_0">일반적으로  핸드폰 사용이 적으면, 스트레스가 낮아요</string>
-    <string name="feature_18general_1">일반적으로  핸드폰 사용이 많으면, 스트레스가 높아요</string>
-    <string name="feature_29general_0">일반적으로  수면량이 많으면, 스트레스가 낮아요</string>
-    <string name="feature_29general_1">일반적으로  수면량이 적으면, 스트레스가 높아요</string>
+    <string name="feature_0general_0">일반적으로 활동량이 많을 때,\n스트레스가 낮아요</string>
+    <string name="feature_0general_1">일반적으로 활동량이 적을 때,\n스트레스가 높아요</string>
+    <string name="feature_7general_0">일반적으로 다른 사람들과의 교류가 많을 때,\n스트레스가 낮아요</string>
+    <string name="feature_7general_1">일반적으로 다른 사람들과의 교류가 적을 때,\n스트레스가 높아요</string>
+    <string name="feature_12general_0">일반적으로 활동 반경이 클 때,\n스트레스가 낮아요</string>
+    <string name="feature_12general_1">일반적으로 활동 반경이 작을 때,\n스트레스가 높아요</string>
+    <string name="feature_18general_0">일반적으로 핸드폰 사용이 적으면,\n스트레스가 낮아요</string>
+    <string name="feature_18general_1">일반적으로 핸드폰 사용이 많으면,\n스트레스가 높아요</string>
+    <string name="feature_29general_0">일반적으로 수면량이 많으면,\n스트레스가 낮아요</string>
+    <string name="feature_29general_1">일반적으로 수면량이 적으면,\n스트레스가 높아요</string>
 
     <string name="string_first_start_step1_title">지금부터 STEP 1을 시작합니다!</string>
     <string name="string_first_start_step2_title">STEP 1을 모두 완료하였습니다.\n이제 STEP2가 시작됩니다!</string>
