1) update layout after today last report 2) fixed small bug in StressReportFragment2

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -303,4 +303,6 @@
     <string name="string_no_detail_report">자세한 예측 결과가 없습니다.</string>
 
     <string name="string_first_home_setting">* 첫 장소 설정은 집을 선택해주세요!\n만약 다른 장소를 선택하셨다면\n뒤로 돌아가서 집 위치를 설정해주세요!</string>
+
+    <string name="string_last_stress_report">오늘의 보고서가 완성되었어요!\n마음케어로 이동합니다.</string>
 </resources>
