--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -14,6 +14,9 @@
     <string name="url_audio_submit">http://%1$s/submit_audio</string>
     <string name="url_location_submit">http://%1$s/sensor_data/locations_submit</string>
 
+    <string name="install_easy_track_msg">EasyTrack Authenticator를 설치하고 다시 실행해주세요!</string>
+    <string name="success_auth_and_connect_campaign_msg">EasyTrack 캠페인에 인증 및 연결을 성공했습니다!</string>
+
     <string name="stress_campaign_id">15</string>
 
     <string name="ConnectionEstablishedMsg">Connection established</string>
@@ -92,7 +95,7 @@
     <string name="cancel">취소</string>
 
     <string name="grant_permissions">Please, grant permissions or turn on locations!</string>
-    <string name="permissions">Permissions</string>
+    <string name="permissions">권한 설정</string>
     <string name="answer_last_ema">answer last EMA</string>
     <string name="_11_00">11:00</string>
     <string name="_15_00">15:00</string>
@@ -106,7 +109,7 @@
     <string name="fsv_contents_two">당신을 위한 맞춤 스트레스 관리를 위해\n2주간 스트레스를 측정합니다.\n하루에 4번오는 설문에 답해주세요!\n꼼꼼히 답해줄수록 정확한 예측이 가능하답니다.</string>
     <string name="fsv_contents_three">2주 간의 설문과 측정이 끝나면\n마인드스코프가 4주 동안 매일\n당신의 스트레스를 분석하여 보내드립니다.\n스트레스 해소를 위한 방법도\n추천 받을 수 있답니다.</string>
     <string name="fsv_contents_four">6주 간의 실험동안 포인트를 모아보세요!\n\nstep 1에서는 설문 1개를 완료할 때마다\nstep 2에서는 리포트 1개를 확인할 때마다\n250원씩의 포인트가 차곡차곡 쌓인답니다.\n실험 중에 총 42,000원을 쌓을 수 있어요!</string>
-    <string name="fsv_contents_five">기본 사례비는 18,000원이며\n실험 종료 인터뷰에 참여하면\n20,000원을 추가지급합니다.\n\n성실하게 실험에 참여하신다면\n총 80,000원을 받을 수 있답니다!</string>
+    <string name="fsv_contents_five">기본 사례비는 18,000원이며\n실험 종료 인터뷰에 참여하면\n20,000원을 추가지급합니다.\n\n성실하게 실험에 참여하신다면\n총 60,000원을 받을 수 있답니다!</string>
     <string name="fsv_contents_six">이제 마인드스코프에 대해\n다 알게 되었군요!\n실험 동의에 체크하고\n마인드스코프를 시작해 볼까요?\n\n</string>
 
     <string name="map_explain">집, 기숙사, 학교, 학습공간, 작업공간, 동아리방, 헬스장 등\n여러분이 자주 방문하는 장소를 검색하여 추가해주세요.</string>
@@ -117,7 +120,7 @@
     <string name="navigation_second">마음 케어</string>
     <string name="navigation_third">마음 기록</string>
 
-    <string name="map_help_contents">마인드스코프에서 정확하게 스트레스를 측정할 수 있도록 위치를 설정해주세요\n\n첫 장소 설정은 집을 선택해주세요!</string>
+    <string name="map_help_contents">마인드스코프에서 정확하게 스트레스를 측정할 수 있도록 자주 가는 위치를 설정해주세요\n\n첫 장소 설정은 집을 선택해주세요!</string>
 
     <string name="time_duration1">07:00 - 11:00</string>
     <string name="time_duration2">11:00 - 03:00</string>
@@ -145,6 +148,7 @@
     <string name="ema_num_info2">오전 11:00 - 오후 03:00 까지의\n스트레스 측정테스트입니다. (2/4)</string>
     <string name="ema_num_info3">오후 03:00 - 오후 07:00 까지의\n스트레스 측정테스트입니다. (3/4)</string>
     <string name="ema_num_info4">오후 07:00 - 오후 11:00 까지의\n스트레스 측정테스트입니다. (4/4)</string>
+    <string name="ema_respons_saved">설문이 저장되었습니다.</string>
 
     <string name="tag_3hours_ago">3시간 전 나의 태그</string>
     <string name="string_tag_guide1">지금 내 상태에 대해 자세히 기록해 볼까요?</string>
