--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,4 +325,7 @@
     <string name="string_before_start_step2_title">마인드스코프가\n케어 방법을 찾는 중입니다.</string>
     <string name="string_before_start_step2_text">오늘 하루의 스트레스를 분석, 기록하고\n스트레스 해소방안을 찾아보아요!</string>
 
+    <string name="string_permission_txt1">마인드스코프가 당신의 스트레스를 예측하기\n위해서는 다양한 활동 정보가 필요해요!</string>
+    <string name="string_permission_txt2">스마트폰 데이터 연동을\n허용해주시겠어요?</string>
+
 </resources>
