--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="step1_notice">이 기능은 2주 간의 설문을 마친 뒤\nSTEP 2부터 잠금 해제 됩니다</string>
 
     <string name="place_name">Location</string>
+    <string name="place_home">Home</string>
     <string name="place_address">Address</string>
     <string name="place_user_name">Place Name</string>
 
