--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -318,6 +318,8 @@
     <string name="string_before_start_step2_text">오늘 하루의 스트레스를 분석, 기록하고\n스트레스 해소방안을 찾아보아요!</string>
 
     <string name="string_permission_txt1">마인드스코프가 당신의 스트레스를 예측하기\n위해서는 다양한 활동 정보가 필요해요!</string>
-    <string name="string_permission_txt2">스마트폰 데이터 연동을\n허용해주시겠어요?</string>
+    <string name="string_permission_txt2">전화: 통화시간과 횟수 측정\n마이크: 주변 소음 크기 감지\n위치: 이동량 측정</string>
+    <string name="string_permission_txt3">*연구 외의 목적으로 사용, 저장되지 않습니다.</string>
+    <string name="string_permission_txt4">스마트폰 데이터 연동을\n허용해주시겠어요?</string>
 
 </resources>
