--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -46,8 +46,11 @@
     <string name="next">다음</string>
 
     <string name="notif_channel_id">StressSensor_notif_chanel</string>
-    <string name="daily_notif_text">설문 시간입니다! 설문에 응해주세요 :)</string>
-    <string name="daily_notif_report_text">스트레스 지수 측정시간 입니다! 한 시간 안에 응답해주세요 :)</string>
+    <string name="daily_notif_text">스트레스 지수 측정시간 입니다! 한 시간 안에 응답해주세요</string>
+    <string name="daily_notif_report_text">스트레스 측정에 문제가 있었어요…</string>
+    <string name="daily_notif_report_low_text">스트레스 단계는 \'낮음\'입니다.\n한 시간 안에 확인해주세요</string>
+    <string name="daily_notif_report_littlehigh_text">스트레스 단계는 \'낮음\'입니다.\n한 시간 안에 확인해주세요</string>
+    <string name="daily_notif_report_high_text">스트레스 단계는 \'낮음\'입니다.\n한 시간 안에 확인해주세요</string>
     <string name="smartphone">smartphone</string>
     <string name="smartwatch">smartwatch</string>
     <string name="submit_to_server">Submit to Server</string>
@@ -251,7 +254,7 @@
      <string name="feature_2low">평소에 비해 움직임이 적었어요 (뛰기)</string>
      <string name="feature_3low">평소에 비해 움직임이 적었어요 (자전거)</string>
      <string name="feature_4low">평소에 비해 움직임이 적었어요 (걷기)</string>
-     <string name="feature_5low">평소에 비해 차량 이동이 적었어요 많았어요</string>
+     <string name="feature_5low">평소에 비해 차량 이동이 적었어요</string>
      <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요</string>
      <string name="feature_7low">평소에 비해 통화량이 적었어요</string>
      <string name="feature_8low">평소에 비해 통화량이 적었어요</string>
