--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -218,7 +218,7 @@
     <string name="do_intervention">스트레스 해소하기</string>
     <!--Zaturi end-->
 
-    <string name="feature_0high">평소에 비해 움직임이 적었어요</string>
+    <string name="feature_0high">한 자리에 오래 머무른 시간이 길어요</string>
     <string name="feature_1high">평소에 비해 움직임이 많았어요 (걷기)</string>
     <string name="feature_2high">평소에 비해 움직임이 많았어요 (뛰기)</string>
     <string name="feature_3high">평소에 비해 움직임이 많았어요 (자전거)</string>
@@ -249,7 +249,7 @@
     <string name="feature_28high">평소에 비해 Food 앱\n사용(배달, 요리)이 많았어요</string>
     <string name="feature_29high">평소에 비해 수면 시간이 많았어요</string>
 
-     <string name="feature_0low">평소에 비해 움직임이 많았어요</string>
+     <string name="feature_0low">한 자리에 오래 머무른 시간이 적어요</string>
      <string name="feature_1low">평소에 비해 움직임이 적었어요 (걷기)</string>
      <string name="feature_2low">평소에 비해 움직임이 적었어요 (뛰기)</string>
      <string name="feature_3low">평소에 비해 움직임이 적었어요 (자전거)</string>
