--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,10 +228,10 @@
 
 
     <string name="feature_0high">한 자리에 오래 머무른 시간이 길어요</string>
-    <string name="feature_1high">평소에 비해 움직임이 많았어요 (걷기)</string>
-    <string name="feature_2high">평소에 비해 움직임이 많았어요 (뛰기)</string>
-    <string name="feature_3high">평소에 비해 움직임이 많았어요 (자전거)</string>
-    <string name="feature_4high">평소에 비해 움직임이 많았어요 (걷기)</string>
+    <string name="feature_1high">평소에 비해 움직임이 많았어요</string>
+    <string name="feature_2high">평소에 비해 움직임이 많았어요</string>
+    <string name="feature_3high">평소에 비해 움직임이 많았어요</string>
+    <string name="feature_4high">평소에 비해 움직임이 많았어요</string>
     <string name="feature_5high">평소에 비해 차량 이동이 많았어요</string>
     <string name="feature_6high">평소에 비해 주변이 시끄러웠던 것 같아요</string>
     <string name="feature_7high">평소에 비해 통화량이 많았어요</string>
@@ -259,10 +259,10 @@
     <string name="feature_29high">평소에 비해 수면 시간이 많았어요</string>
 
     <string name="feature_0low">한 자리에 오래 머무른 시간이 적어요</string>
-    <string name="feature_1low">평소에 비해 움직임이 적었어요 (걷기)</string>
-    <string name="feature_2low">평소에 비해 움직임이 적었어요 (뛰기)</string>
-    <string name="feature_3low">평소에 비해 움직임이 적었어요 (자전거)</string>
-    <string name="feature_4low">평소에 비해 움직임이 적었어요 (걷기)</string>
+    <string name="feature_1low">평소에 비해 움직임이 적었어요</string>
+    <string name="feature_2low">평소에 비해 움직임이 적었어요</string>
+    <string name="feature_3low">평소에 비해 움직임이 적었어요</string>
+    <string name="feature_4low">평소에 비해 움직임이 적었어요</string>
     <string name="feature_5low">평소에 비해 차량 이동이 적었어요</string>
     <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요</string>
     <string name="feature_7low">평소에 비해 통화량이 적었어요</string>
