beta-0806 1) update showing feature_ids with app name 2) change notification using FCM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,7 +236,7 @@
     <string name="feature_8high">평소에 비해 통화량이 많았어요</string>
     <string name="feature_9high">평소에 비해 통화량이 많았어요</string>
     <string name="feature_10high">평소에 비해 통화중 대화량이 많았어요</string>
-    <string name="feature_11high">평소에 비해 SNS 앱 사용%1$s이 많았어요</string>
+    <string name="feature_11high">평소에 비해 SNS\n앱 사용%1$s이 많았어요</string>
     <string name="feature_12high">평소에 비해 많이 이동했어요</string>
     <string name="feature_13high">평소에 비해 방문했던 장소가 많았어요</string>
     <string name="feature_14high">평소에 비해 멀리 나갔어요</string>
@@ -244,16 +244,16 @@
     <string name="feature_16high">평소에 비해 집에 오래 머물렀어요</string>
     <string name="feature_17high">평소에 비해 집에서 휴대폰 사용이 많았어요</string>
     <string name="feature_18high">평소에 비해 휴대폰 사용이 많았어요</string>
-    <string name="feature_19high">평소에 비해 Entertainment &amp; Music 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_20high">평소에 비해 Utility 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_21high">평소에 비해 Shopping 앱\n사용%1$s이 많았어요</string>
+    <string name="feature_19high">평소에 비해 Entertainment &amp; Music\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_20high">평소에 비해 Utility\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_21high">평소에 비해 Shopping\n앱 사용%1$s이 많았어요</string>
     <string name="feature_22high">평소에 비해 게임 앱 사용%1$s이 많았어요</string>
-    <string name="feature_23high">평소에 비해 Health 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_24high">평소에 비해 Education 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_25high">평소에 비해 Travel 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_26high">평소에 비해 Art &amp; Photo 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_27high">평소에 비해 News 앱\n사용%1$s이 많았어요</string>
-    <string name="feature_28high">평소에 비해 Food 앱\n사용%1$s이 많았어요</string>
+    <string name="feature_23high">평소에 비해 Health\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_24high">평소에 비해 Education\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_25high">평소에 비해 Travel\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_26high">평소에 비해 Art &amp; Photo\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_27high">평소에 비해 News\n앱 사용%1$s이 많았어요</string>
+    <string name="feature_28high">평소에 비해 Food\n앱 사용%1$s이 많았어요</string>
     <string name="feature_29high">평소에 비해 수면 시간이 많았어요</string>
 
     <string name="feature_0low">한 자리에 오래 머무른 시간이 적어요</string>
@@ -267,7 +267,7 @@
     <string name="feature_8low">평소에 비해 통화량이 적었어요</string>
     <string name="feature_9low">평소에 비해 통화량이 적었어요</string>
     <string name="feature_10low">평소에 비해 통화 중 대화량이 적었어요</string>
-    <string name="feature_11low">평소에 비해 SNS 앱 사용%1$s이 적었어요</string>
+    <string name="feature_11low">평소에 비해 SNS\n앱 사용%1$s이 적었어요</string>
     <string name="feature_12low">평소에 비해 적게 이동했어요</string>
     <string name="feature_13low">평소에 비해 방문했던 장소가 적었어요</string>
     <string name="feature_14low">평소에 비해 멀리 나가지 않았어요</string>
@@ -275,16 +275,16 @@
     <string name="feature_16low">평소에 비해 집에 적게 머물렀어요</string>
     <string name="feature_17low">평소에 비해 집에서 휴대폰 사용이 적었어요</string>
     <string name="feature_18low">평소에 비해 휴대폰 사용이 적었어요</string>
-    <string name="feature_19low">평소에 비해 Entertainment &amp; Music 앱\n사용%1$s이 적었어요</string>
-    <string name="feature_20low">평소에 비해 Utility 앱\n사용%1$s이 적었어요</string>
-    <string name="feature_21low">평소에 비해 Shopping 앱\n사용%1$s이 적었어요</string>
+    <string name="feature_19low">평소에 비해 Entertainment &amp; Music\n앱 사용%1$s이 적었어요</string>
+    <string name="feature_20low">평소에 비해 Utility\n앱 사용%1$s이 적었어요</string>
+    <string name="feature_21low">평소에 비해 Shopping\n앱 사용%1$s이 적었어요</string>
     <string name="feature_22low">평소에 비해 게임 앱 사용%1$s이 적었어요</string>
-    <string name="feature_23low">평소에 비해 Health 앱\n사용%1$s이 적었어요</string>
+    <string name="feature_23low">평소에 비해 Health\n앱 사용%1$s이 적었어요</string>
     <string name="feature_24low">평소에 비해 Education\n앱 사용%1$s이 적었어요</string>
-    <string name="feature_25low">평소에 비해 Travel 앱\n사용%1$s이 적었어요</string>
-    <string name="feature_26low">평소에 비해 Art &amp; Photo 앱\n사용%1$s이 적었어요</string>
-    <string name="feature_27low">평소에 비해 News 앱\n사용%1$s이 적었어요</string>
-    <string name="feature_28low">평소에 비해 Food 앱\n사용%1$s이 적었어요</string>
+    <string name="feature_25low">평소에 비해 Travel\n앱 사용%1$s이 적었어요</string>
+    <string name="feature_26low">평소에 비해 Art &amp; Photo\n앱 사용%1$s이 적었어요</string>
+    <string name="feature_27low">평소에 비해 News\n앱 사용%1$s이 적었어요</string>
+    <string name="feature_28low">평소에 비해 Food\n앱 사용%1$s이 적었어요</string>
     <string name="feature_29low">평소에 비해 수면 시간이 적었어요</string>
 
     <string name="feature_0general_0">일반적으로 활동량이 많을 때,\n스트레스가 낮아요</string>
