--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -47,7 +47,7 @@
 
     <string name="notif_channel_id">StressSensor_notif_chanel</string>
     <string name="daily_notif_text">스트레스 지수 측정시간 입니다! 한 시간 안에 응답해주세요</string>
-    <string name="daily_notif_report_text">스트레스 측정에 문제가 있었어요…</string>
+    <string name="daily_notif_report_text">스트레스 리포트가 도착했습니다! 한 시간 안에 확인해주세요</string>
     <string name="daily_notif_report_low_text">스트레스 단계는 \'낮음\'입니다.\n한 시간 안에 확인해주세요</string>
     <string name="daily_notif_report_littlehigh_text">스트레스 단계는 \'조금 높음\'입니다.\n한 시간 안에 확인해주세요</string>
     <string name="daily_notif_report_high_text">스트레스 단계는 \'높음\'입니다.\n한 시간 안에 확인해주세요</string>
@@ -327,5 +327,7 @@
     <string name="string_permission_txt4">스마트폰 데이터 연동을\n허용해주시겠어요?</string>
 
     <string name="string_no_stress_report">데이터가 부족하여\n스트레스 리포트가 작성되지 않았습니다.\n\n다음 스트레스 리포트를 기다려주세요!</string>
+
+    <string name="no_features">이런... 마인드스코프가\n정확한 이유를 파악하지 못했습니다.</string>
 
 </resources>
