Modify stress intervention timing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -313,6 +313,7 @@
 
     <string name="string_child2_make_intervention">스트레스 해소방안 만들기</string>
     <string name="string_child2_do_intervention">스트레스 해소하기</string>
+    <string name="string_do_intervention_toast">스트레스 해소방안을 수행하였습니다!</string>
 
     <string name="string_no_detail_report">There is no detail report.</string>
 
