--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,6 +221,7 @@
     <string name="next_time">Next time</string>
     <string name="mute_today">Mute today\'s notifications</string>
     <string name="do_intervention">Relieve stress</string>
+    <string name="diff_intervention">Change intervention</string>
     <!--Zaturi end-->
 
 
