--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -214,6 +214,7 @@
     <string name="mute_today">오늘의 알림 끄기</string>
     <string name="do_intervention">스트레스 해소하기</string>
     <string name="diff_intervention">다른거 하기</string>
+    <string name="enter_diff_int">다른 해소 방안 입력</string>
     <!--Zaturi end-->
 
     <string name="feature_0high">한 자리에 오래 머무른 시간이 길어요</string>
