--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,7 +141,7 @@
     <string name="time_report_duration3">During 03:00 PM - 07:00 PM</string>
     <string name="time_report_duration4">During 07:00 PM - 11:00 PM</string>
 
-    <string name="step1_notice">이 기능은 2주 간의 설문을 마친 뒤\nSTEP 2부터 잠금 해제 됩니다</string>
+    <string name="step1_notice">이 기능은 10일 간의 설문을 마친 뒤\nSTEP 2부터 잠금 해제 됩니다</string>
 
     <string name="place_name">Location</string>
     <string name="place_home">Home</string>
