--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,11 +38,11 @@
     <string name="authentication_btn">Authenticate</string>
 
     <string name="ema_explanation">* 0(Never) ~ 4(Very Often)</string>
-    <string name="ema_question_1">1. In the past 3 hours, did you feel nervous or stressful?</string>
-    <string name="ema_question_2">2. In the past 3 hours, did you feel bad because something unexpected happened?</string>
-    <string name="ema_question_3">3. For the past 3 hours, did you feel you were controlling everything?</string>
-    <string name="ema_question_4">4. In the past three hours, have you successfully dealt with annoying things?</string>
-    <string name="ema_question_5">5. What is your stress level in the last 3 hours?</string>
+    <string name="ema_question_1">1. In the past 4 hours, did you feel nervous or stressful?</string>
+    <string name="ema_question_2">2. In the past 4 hours, did you feel bad because something unexpected happened?</string>
+    <string name="ema_question_3">3. For the past 4 hours, did you feel you were controlling everything?</string>
+    <string name="ema_question_4">4. In the past four hours, have you successfully dealt with annoying things?</string>
+    <string name="ema_question_5">5. What is your stress level in the last 4 hours?</string>
 
     <string name="submit">Submit</string>
     <string name="next">Next</string>
@@ -234,8 +234,8 @@
     <string name="feature_4high">평소에 비해 많이 걸었어요</string>
     <string name="feature_5high">평소에 비해 차량 이동이 많았어요</string>
     <string name="feature_6high">평소에 비해 주변이 시끄러웠던 것 같아요</string>
-    <string name="feature_7high">평소에 비해 통화량이 많았어요</string>
-    <string name="feature_8high">평소에 비해 통화량이 많았어요</string>
+    <string name="feature_7high">평소에 비해 통화 시간이 많았어요</string>
+    <string name="feature_8high">평소에 비해 통화 횟수가 많았어요</string>
     <string name="feature_9high">평소에 비해 통화량이 많았어요</string>
     <string name="feature_10high">평소에 비해 SNS\n앱 사용%1$s이 많았어요</string>
     <string name="feature_11high">평소에 비해 많이 이동했어요</string>
@@ -264,8 +264,8 @@
     <string name="feature_4low">평소에 비해 조금 걸었어요</string>
     <string name="feature_5low">평소에 비해 차량 이동이 적었어요</string>
     <string name="feature_6low">평소에 비해 주변이 조용했던 것 같아요</string>
-    <string name="feature_7low">평소에 비해 통화량이 적었어요</string>
-    <string name="feature_8low">평소에 비해 통화량이 적었어요</string>
+    <string name="feature_7low">평소에 비해 통화 시간이 적었어요</string>
+    <string name="feature_8low">평소에 비해 통화 횟수가 적었어요</string>
     <string name="feature_9low">평소에 비해 통화량이 적었어요</string>
     <string name="feature_10low">평소에 비해 SNS 앱 사용%1$s이 적었어요</string>
     <string name="feature_11low">평소에 비해 적게 이동했어요</string>
