--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,12 +37,20 @@
     <string name="authentication_txt">Authentication</string>
     <string name="authentication_btn">Authenticate</string>
 
+    <string name="ema_title">Stress Measurement Test</string>
+
     <string name="ema_explanation">* 0(Never) ~ 4(Very Often)</string>
     <string name="ema_question_1">1. In the past 4 hours, did you feel nervous or stressful?</string>
     <string name="ema_question_2">2. In the past 4 hours, did you feel bad because something unexpected happened?</string>
     <string name="ema_question_3">3. For the past 4 hours, did you feel you were controlling everything?</string>
     <string name="ema_question_4">4. In the past four hours, have you successfully dealt with annoying things?</string>
     <string name="ema_question_5">5. What is your stress level in the last 4 hours?</string>
+
+    <string name="ema_answer_1">전혀 그렇지 않다</string>
+    <string name="ema_answer_2">약간 그렇지 않다</string>
+    <string name="ema_answer_3">보통이다</string>
+    <string name="ema_answer_4">조금 그렇다</string>
+    <string name="ema_answer_5">매우 그렇다</string>
 
     <string name="submit">Submit</string>
     <string name="next">Next</string>
