--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -190,14 +190,14 @@
 
     <string name="string_stress_why">이유는 무엇일까요?</string>
 
-    <string name="string_stress_result_low"><![CDATA[스트레스 <font color="#86a9d5">낮음</font>]]></string>
-    <string name="string_stress_result_littlehigh"><![CDATA[스트레스 <font color="#e6ca62">조금 높음</font>]]></string>
-    <string name="string_stress_result_high"><![CDATA[스트레스 <font color=""#db969d">높음</font>]]></string>
+    <string name="string_stress_result_low"><![CDATA[스트레스 <font color="#86a9d5">낮음</font>입니다.]]></string>
+    <string name="string_stress_result_littlehigh"><![CDATA[스트레스 <font color="#e6ca62">조금 높음</font>입니다.]]></string>
+    <string name="string_stress_result_high"><![CDATA[스트레스 <font color=""#db969d">높음</font>입니다.]]></string>
 
     <string name="string_prediction_correct">제 예측이 맞았네요!</string>
     <string name="string_prediction_incorrect">제 예측이 틀렸네요!</string>
 
-    <string name="string_am_i_right">스트레스 요인에 대한 제 분석이 맞았나요?</string>
+    <string name="string_am_i_right">제 설명이 유용했나요?</string>
 
     <string name="care_step2_title">마음 케어</string>
     <string name="tab_title1_care_step2">스트레스 분석</string>
@@ -342,5 +342,9 @@
     <string name="when_no_report_and_after_11_hour">다음 스트레스 리포트를 기다려주세요!</string>
 
     <string name="when_no_intervention_performed">아직 스트레스를 해소하지 않았습니다!\n스트레스를 해소해보세요!</string>
+
+    <string name="stress_report_lv0">스트레스가 낮을 때,</string>
+    <string name="stress_report_lv1">스트레스가 조금 높을 때,</string>
+    <string name="stress_report_lv2">스트레스가 높을 때,</string>
 
 </resources>
